ローカルの設定

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -40,7 +40,7 @@
         {
             "label": "firebaseのエミュレータの起動",
             "type": "shell",
-            "command": "firebase emulators:start --import ${input:seeds} --project manabiyaai",
+            "command": "firebase emulators:start --import ${input:seeds}",
             "args": [],
             "problemMatcher": [],
         },
