--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "mainブランチから新規ブランチ作成",
             "type": "shell",
-            "command": "git checkout main && git pull && git checkout -b ${input:branch}",
+            "command": "git checkout main && git pull && git checkout -b ${input:branch} && send_discord \"${input:branch}\"",
             "args": [],
             "problemMatcher": [],
         },
